# datalog-interpreter

./: CMakeLists.txt  Database.h  DatalogProgram.cpp  Header.cpp  Header.h  Interpreter.h  Lexer.cpp  Lexer.h  Parameter.cpp  Parameter.h  Predicate.cpp  Predicate.h  Relation.cpp  Relation.h  Tuple.h  a.out  datalogProgram.h  lab3  main.cpp  test.txt
lab3.dSYM/Contents/Resources/DWARF/: lab3
